Issue #2748: Fixed wrong position of the clear input button on the global search bar on Desktop

--- a/frontend/js/modules/search/header/search-header.less
+++ b/frontend/js/modules/search/header/search-header.less
@@ -132,6 +132,7 @@
 
     .search-header-form {
       .flex;
+      position: relative;
 
       i.mdi:not(.close-settings) {
         color: @textPrimaryColor;
@@ -141,6 +142,11 @@
           color: @search-input-color-focus;
           transition: color 100ms ease-in;
         }
+      }
+
+      .search-header-button.clean-button {
+        position: absolute;
+        right: 40px;
       }
 
       esn-search-advanced-toggle-button {
